--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Hello World!</h1>
     <h2>My name is Egzon Bllaca</h2>
+    <script src="index.js"></script>
   </body>
 </html>
